(Hopefully) fixed styling on Mobile by adjusting some overflow and wrapping properties.

--- a/WeatherForecastSPA/web/style/less/app.less
+++ b/WeatherForecastSPA/web/style/less/app.less
@@ -10,42 +10,49 @@
 @import (less) '../css/normalize.css';
 
 html {
-  width: 100vw;
-  height: 100vh;
+    width: 100vw;
+    height: 100vh;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  z-index: 0;
-  display: grid;
-  margin: 0 auto;
-  height: 100%;
-  background: url('https://www.transparenttextures.com/patterns/60-lines.png')
-    center center repeat;
-  background-color: rgba(0, 232, 155, 0.6);
-  color: #333;
+    position: fixed;
+    font-family: 'Roboto', sans-serif;
+    z-index: 0;
+    display: grid;
+    margin: 0 auto;
+    height: 100vh;
+    width: 100vw;
 
-  grid-auto-columns: auto;
-  grid-auto-rows: 50px 1fr auto;
+    background: url('https://www.transparenttextures.com/patterns/60-lines.png') center center repeat;
+    background-color: rgba(0, 232, 155, 0.6);
+    color: #333;
+
+    grid-auto-columns: auto;
+    grid-auto-rows: 50px 1fr auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 main {
-  margin: 0 auto;
-  max-width: 900px;
-  width: 100%;
+    margin: 0 auto;
+    max-width: 900px;
+    width: 100%;
+    max-height: 100vh;
+    overflow-y: scroll;
+    margin-bottom: 10px;
 }
 
 .container {
-  margin-top: 1rem;
-  padding: 0.5rem;
-  border: 1px solid white;
-  border-radius: 2px;
-  background: rgba(255, 255, 255, 1);
-  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.005),
-    0 15px 20px rgba(166, 173, 201, 0.02);
+    margin-top: 1rem;
+    padding: 0.5rem;
+    border: 1px solid white;
+    border-radius: 2px;
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 5px 10px rgba(154, 160, 185, 0.005),
+        0 15px 20px rgba(166, 173, 201, 0.02);
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
