--- a/WeatherForecastSPA/web/style/less/footer.less
+++ b/WeatherForecastSPA/web/style/less/footer.less
@@ -1,22 +1,22 @@
 // out: ../css/footer.css, compress: true, strictMath: true
 
 .footer-container {
-  height: 35px;
-  margin-top: 30px;
-  background: #333;
+    height: 35px;
+    background: #333;
 
-  .footer {
-    display: flex;
-    height: 100%;
-    width: 50vw;
-    margin: 0 auto;
-    font-size: 13px;
-    color: white;
-    justify-content: space-around;
-    align-items: center;
+    .footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        height: 100%;
+        width: 70vw;
+        margin: 0 auto;
+        font-size: 13px;
+        color: white;
+        text-align: center;
+        align-items: center;
 
-    .icon {
-      font-size: 20px;
+        .icon {
+            font-size: 20px;
+        }
     }
-  }
 }
