--- a/WeatherForecastSPA/web/style/less/home.less
+++ b/WeatherForecastSPA/web/style/less/home.less
@@ -1,123 +1,124 @@
 // out: ../css/home.css, compress: true, strictMath: true
 
 .home-container {
-  display: grid;
-  height: 100%;
-
-  color: #333;
-
-  grid-template-columns: auto;
-  grid-template-rows: 40vh auto;
-  row-gap: 20px;
-  justify-items: left;
-  align-items: flex-start;
-
-  .map-container {
-    width: 100%;
+    display: grid;
     height: 100%;
 
-    #map {
-      height: 100%;
-    }
-  }
+    color: #333;
 
-  .coordinates-button {
-    background: url(./map.png) center center no-repeat;
-    background-size: cover;
-    height: 24px;
-    width: 24px;
-  }
+    grid-template-columns: auto;
+    grid-template-rows: 40vh auto;
+    row-gap: 20px;
+    justify-items: left;
+    align-items: flex-start;
 
-  .input-container {
-    position: relative;
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
-    // grid-template-rows: 60px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    .map-container {
+        width: 100%;
+        height: 100%;
 
-    .top {
-      display: grid;
-      grid-template-columns: 1fr 1fr 20px;
-      grid-template-rows: 60px;
-
-      input {
-        font-size: 30px;
-
-        display: block;
-
-        min-width: 300px;
-        height: auto;
-        padding-top: 10px;
-
-        color: #333;
-        border: none;
-        border-bottom: 4px solid #333;
-        outline: none;
-        background: rgba(255, 255, 255, 0);
-        white-space: nowrap;
-        overflow: scroll;
-      }
-
-      .coordinates-button {
-        position: absolute;
-        right: 1rem;
-      }
-
-      @media screen and (max-width: 900px) {
-        grid-template-columns: 1fr;
-      }
+        #map {
+            height: 100%;
+        }
     }
 
-    .bottom {
-      margin-top: 1rem;
-      height: 40px;
+    .input-container {
+        position: relative;
+
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .coordinates-button {
+            background: url(./map.png) center center no-repeat;
+            background-size: cover;
+            height: 24px;
+            width: 24px;
+        }
+
+        .top {
+            display: grid;
+            grid-template-columns: 1fr 1fr 20px;
+
+            input {
+                font-size: 30px;
+
+                display: block;
+
+                min-width: 300px;
+                height: auto;
+                padding-top: 10px;
+
+                color: #333;
+                border: none;
+                border-bottom: 4px solid #333;
+                outline: none;
+                background: rgba(255, 255, 255, 0);
+                white-space: nowrap;
+                overflow: scroll;
+            }
+
+            .coordinates-button {
+                position: absolute;
+                right: 1rem;
+            }
+
+            @media screen and (max-width: 900px) {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        .bottom {
+            margin-top: 1rem;
+            height: 40px;
+        }
     }
-  }
 }
 
 .error-message {
-  position: absolute;
-  top: 40px;
-  right: -50px;
-  height: 0px;
-  width: 35vw;
-  height: 0px;
-  opacity: 0;
-  text-align: center;
-  transition: all cubic-bezier(0.311, 0.441, 0.444, 1.1) 0.3s;
-  border: 3px solid rgba(255, 255, 255, 0.5) !important;
-  z-index: 999;
-  overflow: hidden;
-
-  .close-button {
     position: absolute;
-    top: 3px;
-    right: 5px;
-    border-radius: 100%;
-    color: black;
-    width: 20px;
-    height: 20px;
-    line-height: 20px;
-    cursor: pointer;
-    transition: all linear 0.2s;
-    &:hover {
-      background: black;
-      color: white;
-    }
-  }
+    top: 40px;
+    right: -50px;
+    height: 0px;
+    width: 35vw;
+    height: 0px;
+    opacity: 0;
+    text-align: center;
+    transition: all cubic-bezier(0.311, 0.441, 0.444, 1.1) 0.3s;
+    border: 3px solid rgba(255, 255, 255, 0.5) !important;
+    z-index: 999;
+    overflow: hidden;
 
-  &.shown {
-    right: 0;
-    height: auto;
-    opacity: 1;
-    color: #d8000c;
-    background-color: #ffd2d2;
-    .coordinates-button {
-      display: inline-block !important;
-      height: 17px;
-      width: 17px;
+    .close-button {
+        position: absolute;
+        top: 3px;
+        right: 5px;
+        border-radius: 100%;
+        color: black;
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: all linear 0.2s;
+
+        &:hover {
+            background: black;
+            color: white;
+        }
     }
-  }
+
+    &.shown {
+        right: 0;
+        height: auto;
+        opacity: 1;
+        color: #d8000c;
+        background-color: #ffd2d2;
+
+        .coordinates-button {
+            display: inline-block !important;
+            background: url('./map.png') center center no-repeat;
+            background-size: cover;
+            height: 17px;
+            width: 17px;
+        }
+    }
 }
